# editor_1

./: .gitignore  README.md  _test_final.txt  _test_p4p5.txt  album_maker_frd.md  color_theory.md  main.py  pyproject.toml  run_output.txt  task_list.md  test.md  test_all_output.txt  test_oklab_output.txt  test_output.txt  test_sota_output.txt
.agent/workflows/: tdd_cycle.md
configs/: color_only_config.yaml  prod_config.yaml  sota_full_config.yaml
output/Creatives_ColorOnly/: report.json
output/Creatives_Color_Grade_Run/: report.json
output/Creatives_Color_Grade_Run2/: report.json
output/Creatives_Color_Grade_Run_black_and_white/: report.json
output/Creatives_Color_Grade_Run_golden_hour/: report.json
output/Creatives_Color_Grade_Run_high_fashion/: report.json
output/Creatives_Color_Grade_Run_sepia_monochrome/: report.json
output/Creatives_Color_Grade_Run_vibrant/: report.json
output/Creatives_Color_Grade_Run_vintage_painterly/: report.json
output/Creatives_Cutouts_BiRefNet/: report.json
scripts/: download_models.py
tests/: test_aces.py  test_ai_layout.py  test_album_layout.py  test_background_removal.py  test_blur.py  test_clustering.py  test_color.py  test_config.py  test_cropping.py  test_culling_engine.py  test_face.py  test_gpu.py  test_image_io.py  test_layout.py  test_lut3d.py  test_models.py  test_narrative.py  test_oklab.py  test_pipeline.py  test_quality.py  test_restoration.py  test_semantic_segmentation.py  test_sota_cat02.py  test_sota_engine.py  test_sota_guided_grain.py  test_sota_p2p3.py  test_tiling.py  test_watermark.py
(+41 files in other folders)
